blender suddenly closes after pressing solve camera motion #42800

Closed
opened 2014-12-04 05:49:54 +01:00 by yellow foxz · 8 comments

System Information
win 7,

Blender Version
blender 2.72b

Short description of error
in motion tracking
after adding markers to the movie clip, then in solve tab i tick the keyframe then press solve camera motion, suddenly blender close
Exact steps for others to reproduce the error
1 adding markers to the movie clip
2 tick the keyframe in solve tab
3 press solve camera motion
4 blender suddenly close

blender file >> motion_tracking_test.blend

**System Information** win 7, **Blender Version** blender 2.72b **Short description of error** in motion tracking after adding markers to the movie clip, then in solve tab i tick the keyframe then press solve camera motion, suddenly blender close **Exact steps for others to reproduce the error** 1 adding markers to the movie clip 2 tick the keyframe in solve tab 3 press solve camera motion 4 blender suddenly close blender file >> [motion_tracking_test.blend](https://archive.blender.org/developer/F128772/motion_tracking_test.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @yellowfoxz

Added subscriber: @yellowfoxz
Author

same goes to tick keyframe and tripod in solve tab.. blender closes

same goes to tick keyframe and tripod in solve tab.. blender closes
Sergey Sharybin was assigned by Antonis Ryakiotakis 2014-12-04 11:44:22 +01:00

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

Camera tracker goes to Sergey.

Camera tracker goes to Sergey.

This issue was referenced by 8600dc6365

This issue was referenced by 8600dc6365a544fdee2ec2d00b5b7b980f61613e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 8600dc6365.

Closed by commit 8600dc6365.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42800
No description provided.